--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-ui></app-ui>
+<app-ui>
+
+  <app-header class="tr-header"></app-header>
+  <app-nav class="tr-nav"></app-nav>
+  <app-footer class="tr-footer"></app-footer>
+  <h1 class="tr-content">contenu dynamique des pages en fonction des routes</h1>
+
+</app-ui>
