event binding, attribute directive NgClass and structural directive NgIf

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-ui>
 
+  <button class="tr-btn-close">close</button>
+  <button class="tr-btn-open">open</button>
   <app-header class="tr-header"></app-header>
   <app-nav class="tr-nav"></app-nav>
   <app-footer class="tr-footer"></app-footer>
