--- a/src/app/ui/components/ui/ui.component.html
+++ b/src/app/ui/components/ui/ui.component.html
@@ -1,12 +1,16 @@
 <header class="fixed-top">
   <!-- un bouton avec un click pour ouvrir ou fermer la nav -->
   <span (click)="toggle()">
-    <ng-content *ngIf="open; else elseBlock" select=".tr-btn-close"></ng-content>
+    <ng-container *ngIf="open; then thenBlock else elseBlock"></ng-container>
+    <ng-template #thenBlock>
+      <ng-content select=".tr-btn-close"></ng-content>
+    </ng-template>
     <ng-template #elseBlock>
       <ng-content select=".tr-btn-open"></ng-content>
     </ng-template>
+
   </span>
-  <!-- utilisez la structure ngif else -->
+  <!-- utilisez la structure ngif then else -->
   <!-- transclusion pour prejection de template html dans des templates html -->
   <ng-content select=".tr-header"></ng-content>
 
