--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-ui>
 
-  <button class="tr-btn-close">close</button>
-  <button class="tr-btn-open">open</button>
+  <app-icon-close class="tr-btn-close">close</app-icon-close>
+  <app-icon-nav class="tr-btn-open">open</app-icon-nav>
   <app-header class="tr-header"></app-header>
   <app-nav class="tr-nav"></app-nav>
   <app-footer class="tr-footer"></app-footer>
