Router, lazy loading, preloading strategy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
   <app-header class="tr-header"></app-header>
   <app-nav class="tr-nav"></app-nav>
   <app-footer class="tr-footer"></app-footer>
-  <h1 class="tr-content">contenu dynamique des pages en fonction des routes</h1>
+  <router-outlet class="tr-content"></router-outlet>
 
 </app-ui>
