--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,1 +1,8 @@
-<p>nav works!</p>
+<ul class="nav flex-column">
+  <li class="nav-item">
+    <a class="nav-link" [routerLink]="['list-orders']" routerLinkActive="active">Orders</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/list-clients" routerLinkActive="active">Clients</a>
+  </li>
+</ul>
