--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,1 +1,4 @@
-<p>page-list-orders works!</p>
+<app-template-full-width>
+  <app-tab-list></app-tab-list>
+  <app-btn-redirect></app-btn-redirect>
+</app-template-full-width>
