--- a/src/app/shared/components/tab-list/tab-list.component.html
+++ b/src/app/shared/components/tab-list/tab-list.component.html
@@ -8,7 +8,7 @@
     <tr *ngFor="let item of datas">
       <td>{{ item.type }}</td>
       <td>{{ item.client }}</td>
-      <td>{{ item.tjm }}</td>
+      <td>{{ item.tjm_ht }}</td>
       <td>ht</td>
       <td>ttc</td>
       <td>{{ item.state }}</td>
