--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,4 +1,5 @@
-<app-template-full-width>
-  <app-tab-list></app-tab-list>
-  <app-btn-redirect></app-btn-redirect>
+<app-template-full-width [title]="titre" *ngIf="collection">
+  <button (click)="changeTitle()">modif title</button>
+  <app-tab-list [headers]="entetes" [datas]="collection"></app-tab-list>
+  <app-btn-redirect label="Add Order" route="add-order"></app-btn-redirect>
 </app-template-full-width>
