--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,5 +1,14 @@
 <app-template-full-width [title]="titre" *ngIf="collection">
   <button (click)="changeTitle()">modif title</button>
-  <app-tab-list [headers]="entetes" [datas]="collection"></app-tab-list>
+  <app-tab-list [headers]="entetes">
+    <tr *ngFor="let item of collection">
+      <td>{{ item.type }}</td>
+      <td>{{ item.client }}</td>
+      <td>{{ item.tjm_ht }}</td>
+      <td>{{ totalHT(item) }}</td>
+      <td>{{ totalTTC(item) }}</td>
+      <td>{{ item.state }}</td>
+    </tr>
+  </app-tab-list>
   <app-btn-redirect label="Add Order" route="add-order"></app-btn-redirect>
 </app-template-full-width>
