--- a/src/app/shared/components/tab-list/tab-list.component.html
+++ b/src/app/shared/components/tab-list/tab-list.component.html
@@ -5,13 +5,8 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let item of datas">
-      <td>{{ item.type }}</td>
-      <td>{{ item.client }}</td>
-      <td>{{ item.tjm_ht }}</td>
-      <td>ht</td>
-      <td>ttc</td>
-      <td>{{ item.state }}</td>
-    </tr>
+
+    <ng-content></ng-content>
+
   </tbody>
 </table>
