--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,13 +1,14 @@
 <app-template-full-width [title]="titre" *ngIf="collection">
+  <!-- {{ collection | json }} -->
   <button (click)="changeTitle()">modif title</button>
   <app-tab-list [headers]="entetes">
     <tr *ngFor="let item of collection">
       <td>{{ item.type }}</td>
-      <td>{{ item.client }}</td>
+      <td>{{ item.client | uppercase }}</td>
       <td>{{ item.nb_days }}</td>
-      <td>{{ item.tjm_ht }}</td>
-      <td>{{ item.tjm_ht | total2: item.nb_days }}</td>
-      <td>{{ item.tjm_ht | total2: item.nb_days: item.taux_tva }}</td>
+      <td>{{ item.tjm_ht | currency }}</td>
+      <td>{{ item | total | currency }}</td>
+      <td>{{ item | total: true | currency }}</td>
       <td>{{ item.state }}</td>
     </tr>
   </app-tab-list>
