--- a/src/app/orders/pages/page-edit-order/page-edit-order.component.html
+++ b/src/app/orders/pages/page-edit-order/page-edit-order.component.html
@@ -1,1 +1,3 @@
-<p>page-edit-order works!</p>
+<app-template-container title="Edit Order">
+  <app-form-order [init]="item"></app-form-order>
+</app-template-container>
