--- a/src/app/orders/pages/page-add-order/page-add-order.component.html
+++ b/src/app/orders/pages/page-add-order/page-add-order.component.html
@@ -1,3 +1,3 @@
 <app-template-container title="Add Order">
-  <app-form-order></app-form-order>
+  <app-form-order (submited)="add($event)"></app-form-order>
 </app-template-container>
