--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -5,6 +5,7 @@
     <tr *ngFor="let item of collection">
       <td>
         <app-icon-edit (click)="goToEdit(item.id)"></app-icon-edit>
+        <app-icon-delete (click)="deleteItem(item.id)"></app-icon-delete>
       </td>
       <td>{{ item.type }}</td>
       <td>{{ item.client | uppercase }}</td>
