--- a/src/app/clients/pages/page-add-client/page-add-client.component.html
+++ b/src/app/clients/pages/page-add-client/page-add-client.component.html
@@ -1,1 +1,3 @@
-<p>page-add-client works!</p>
+<app-template-container title="Add Order">
+  <app-form-client (submited)="add($event)"></app-form-client>
+</app-template-container>
