--- a/src/app/orders/components/form-order/form-order.component.html
+++ b/src/app/orders/components/form-order/form-order.component.html
@@ -3,11 +3,16 @@
   <div class="form-group">
     <label for="typePresta">type</label>
     <input formControlName="type" type="text" class="form-control" id="typePresta">
+    <div class="alert alert-danger" *ngIf="form.controls['type'].touched && form.controls['type'].invalid">champ invalid
+    </div>
   </div>
 
   <div class="form-group">
     <label for="client">client</label>
     <input formControlName="client" type="text" class="form-control" id="client">
+    <div class="alert alert-danger" *ngIf="form.controls['client'].touched && form.controls['client'].invalid">champ
+      invalid
+    </div>
   </div>
 
   <div class="form-group">
@@ -37,5 +42,5 @@
     <textarea formControlName="comment" class="form-control" id="comment"></textarea>
   </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button [disabled]="form.invalid" type="submit" class="btn btn-primary">Submit</button>
 </form>
