--- a/src/app/clients/components/form-client/form-client.component.html
+++ b/src/app/clients/components/form-client/form-client.component.html
@@ -3,11 +3,16 @@
   <div class="form-group">
     <label for="Name">Name</label>
     <input formControlName="name" type="text" class="form-control" id="name">
+    <div class="alert alert-danger" *ngIf="form.controls['name'].touched && form.controls['name'].invalid">champ invalid
+    </div>
   </div>
 
   <div class="form-group">
     <label for="email">email</label>
     <input formControlName="email" type="text" class="form-control" id="email">
+    <div class="alert alert-danger" *ngIf="form.controls['email'].touched && form.controls['email'].invalid">champ
+      invalid
+    </div>
   </div>
 
   <div class="form-group">
