--- a/src/app/shared/components/tab-list/tab-list.component.html
+++ b/src/app/shared/components/tab-list/tab-list.component.html
@@ -5,8 +5,10 @@
     </tr>
   </thead>
   <tbody>
+    <button (click)="test()">click tab</button>
 
     <ng-content></ng-content>
 
   </tbody>
 </table>
+{{check()}}
