--- a/src/app/ui/components/ui/ui.component.html
+++ b/src/app/ui/components/ui/ui.component.html
@@ -37,6 +37,7 @@
     </div>
 
     <footer>
+      <button (click)="test()">click ui</button>
 
       <ng-content select=".tr-footer"></ng-content>
 
@@ -44,3 +45,4 @@
 
   </div>
 </main>
+{{check()}}
