--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -23,3 +23,4 @@
   </app-tab-list>
   <app-btn-redirect label="Add Order" route="add-order"></app-btn-redirect>
 </app-template-full-width>
+{{check()}}
