--- a/src/app/login/pages/page-sign-up/page-sign-up.component.html
+++ b/src/app/login/pages/page-sign-up/page-sign-up.component.html
@@ -1,1 +1,3 @@
-<p>page-sign-up works!</p>
+<app-template-full-width title="Authentification">
+    <app-sign-up-form (submitted)="register($event)"></app-sign-up-form>
+</app-template-full-width>
