Utilisation du detach & reattach

--- a/src/app/shared/components/tab-list/tab-list.component.html
+++ b/src/app/shared/components/tab-list/tab-list.component.html
@@ -1,4 +1,7 @@
-<span>Compteur : {{ count }}</span>
+<div>
+  <span>Compteur : {{ count }}</span>
+  <button (click)="refreshCounter()">Refresh counter</button>
+</div>
 <table class="table">
   <thead>
     <tr>
