--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,7 +1,8 @@
 <app-template-full-width [title]="titre" *ngIf="collection$ | async as collection">
   <!-- {{ collection | json }} -->
   <button (click)="changeTitle()">modif title</button>
-  <app-tab-list [headers]="entetes">
+  <button (click)="incrementCounter()">Inc counter</button>
+  <app-tab-list [headers]="entetes" [counter]="counter">
     <tr *ngFor="let item of collection">
       <td>
         <app-icon-edit (click)="goToEdit(item.id)"></app-icon-edit>
@@ -28,3 +29,4 @@
   <a class="nav-link" routerLink="detail" routerLinkActive="active">Order details</a>
   <router-outlet></router-outlet>
 </app-template-full-width>
+{{ check() }}
