--- a/src/app/login/components/sign-in-form/sign-in-form.component.html
+++ b/src/app/login/components/sign-in-form/sign-in-form.component.html
@@ -14,10 +14,10 @@
       </div>
     </div>
     <div class="form-group">
-      <button type="submit" class="btn btn-primary" [disabled]="loading">
-        <span *ngIf="loading" class="spinner-border spinner-border-sm"></span>
+      <button type="submit" class="btn btn-primary">
+        <!-- <span *ngIf="loading" class="spinner-border spinner-border-sm"></span> -->
         Login
       </button>
-      <a routerLink="/login/sign-up" class="btn btn-link">Register</a>
+      <a routerLink="/sign-up" class="btn btn-link">Register</a>
     </div>
 </form>  
