--- a/src/app/login/components/sign-up-form/sign-up-form.component.html
+++ b/src/app/login/components/sign-up-form/sign-up-form.component.html
@@ -35,6 +35,6 @@
       <button class="btn btn-primary" type="submit">
         Register
       </button>
-      <a routerLink="/login" class="btn btn-link">Cancel</a>
+      <a routerLink="/sign-in" class="btn btn-link">Cancel</a>
     </div>
 </form>  
