--- a/src/app/shared/components/tab-list/tab-list.component.html
+++ b/src/app/shared/components/tab-list/tab-list.component.html
@@ -1,3 +1,5 @@
+<span>Compteur : {{ count }}</span>
+<button (click)="refreshCounter()">Refresh count</button>
 <table class="table">
   <thead>
     <tr>
