--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -25,5 +25,7 @@
     </tr>
   </app-tab-list>
   <app-btn-redirect label="Add Order" route="add-order"></app-btn-redirect>
+  <a class="nav-link" routerLink="detail" routerLinkActive="active">Order details</a>
+  <a class="nav-link" routerLink="other" routerLinkActive="active">Other</a>
   <router-outlet></router-outlet>
 </app-template-full-width>
