--- a/src/app/login/pages/page-sign-in/page-sign-in.component.html
+++ b/src/app/login/pages/page-sign-in/page-sign-in.component.html
@@ -1,1 +1,3 @@
-<p>page-sign-in works!</p>
+<app-template-full-width title="Authentification">
+    <app-sign-in-form></app-sign-in-form>
+</app-template-full-width> 
