--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,3 +1,4 @@
+<span *ngIf="currentUser">{{ 'Home.WelcomeTextLogged' | translate:{'username': currentUser.username} }}</span>
 <ul class="nav flex-column">
   <li class="nav-item">
     <a class="nav-link" [routerLink]="['list-orders']" routerLinkActive="active">Orders</a>
@@ -7,5 +8,9 @@
   </li>
   <li class="nav-item">
     <a class="nav-link" *ngIf="currentUser" (click)="logout()">Déconnexion</a>
+  </li>
+  <li class="nav-item">
+    <button (click)="changeLanguage('en')">Passer en anglais</button>
+    <button (click)="changeLanguage('fr')">Passer en français</button>
   </li>
 </ul>
