Detection du changement

--- a/src/app/shared/components/tab-list/tab-list.component.html
+++ b/src/app/shared/components/tab-list/tab-list.component.html
@@ -1,3 +1,5 @@
+<span>Compteur : {{ count }}</span>
+<button (click)="refreshCounter()">Refresh</button>
 <table class="table">
   <thead>
     <tr>
@@ -10,3 +12,4 @@
 
   </tbody>
 </table>
+{{ check() }}
