--- a/src/app/orders/components/form-order/form-order.component.html
+++ b/src/app/orders/components/form-order/form-order.component.html
@@ -8,6 +8,8 @@
   <div class="form-group">
     <label for="client">client</label>
     <input formControlName="client" type="text" class="form-control" id="client">
+    <div class="alert alert-danger" *ngIf="form.controls['client'].touched && form.controls['client'].invalid">champ invalid
+    </div>
   </div>
 
   <div class="form-group">
@@ -37,5 +39,7 @@
     <textarea formControlName="comment" class="form-control" id="comment"></textarea>
   </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Submit</button>
 </form>
+
+{{ check() }}
