--- a/src/app/orders/pages/page-list-orders/page-list-orders.component.html
+++ b/src/app/orders/pages/page-list-orders/page-list-orders.component.html
@@ -1,7 +1,9 @@
 <app-template-full-width [title]="titre" *ngIf="collection$ | async as collection">
   <!-- {{ collection | json }} -->
   <button (click)="changeTitle()">modif title</button>
-  <app-tab-list [headers]="entetes">
+  <button (click)="incrementCounter()">Inc count.</button>
+  <button (click)="detacher()">Detacher</button>
+  <app-tab-list [headers]="entetes" [counter]="counter">
     <tr *ngFor="let item of collection">
       <td>
         <app-icon-edit (click)="goToEdit(item.id)"></app-icon-edit>
@@ -29,3 +31,4 @@
   <a class="nav-link" routerLink="other" routerLinkActive="active">Other</a>
   <router-outlet></router-outlet>
 </app-template-full-width>
+{{ check() }}
