--- a/src/app/shared/components/tab-list/tab-list.component.html
+++ b/src/app/shared/components/tab-list/tab-list.component.html
@@ -1,5 +1,5 @@
-<span>Compteur : {{ count }}</span>
-<button (click)="refreshCounter()">Refresh</button>
+<!-- <span>Compteur : {{ count }}</span>
+<button (click)="refreshCounter()">Refresh</button> -->
 <table class="table">
   <thead>
     <tr>
