--- a/src/app/orders/pages/page-add-order/page-add-order.component.html
+++ b/src/app/orders/pages/page-add-order/page-add-order.component.html
@@ -1,4 +1,4 @@
 <app-template-container title="Add Order">
-  <app-form-order (submited)="add($event)"></app-form-order>
+  <app-form-order (submited)="addOrder($event)"></app-form-order>
 </app-template-container>
 {{ check() }}
